--- a/estilos/pag-principal.css
+++ b/estilos/pag-principal.css
@@ -1,6 +1,6 @@
 /* HEADER */
 header{
-    background-image: url('/img/cabecera.png');
+    background-image: url('../img/cabecera.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
